--- a/templates/topic_inner.html
+++ b/templates/topic_inner.html
@@ -17,17 +17,17 @@
 		{{if not .Topic.IsClosed or .CurrentUser.Perms.CloseTopic}}
 		{{if .CurrentUser.Perms.EditTopic}}
 		<form id="edit_topic_form" action='/topic/edit/submit/{{.Topic.ID}}?s={{.CurrentUser.Session}}' method="post"></form>
-		<input form='edit_topic_form' class='show_on_edit topic_name_input' name="topic_name" value='{{.Topic.Title}}' type="text" aria-label="{{lang "topic.title_input_aria"}}"/>
+		<input form='edit_topic_form' class='show_on_edit topic_name_input' name="topic_name" value='{{.Topic.Title}}' type="text" aria-label="{{lang "topic.title_input_aria"}}">
 		<button form='edit_topic_form' name="topic-button" class="formbutton show_on_edit submit_edit">{{lang "topic.update_button"}}</button>
 		{{end}}
 		{{end}}
 	</div>
 </div>
-{{if .Poll.ID}}{{template "topic_poll.html" . }}{{end}}
+{{if .Poll}}{{template "topic_poll.html" . }}{{end}}
 
 <article {{scope "opening_post"}} itemscope itemtype="http://schema.org/CreativeWork" class="rowblock post_container top_post" aria-label="{{lang "topic.opening_post_aria"}}">
 	<div class="rowitem passive editable_parent post_item {{.Topic.ClassName}}" style="background-image:url({{.Topic.Avatar}}),url(/s/{{.Header.Theme.Name}}/post-avatar-bg.jpg);background-position:0px {{if le .Topic.ContentLines 5}}-1{{end}}0px;background-repeat:no-repeat,repeat-y;">
-		<div class="hide_on_edit topic_content user_content" itemprop="text">{{.Topic.ContentHTML}}</div>
+		<div class="hide_on_edit topic_content user_content"itemprop="text">{{.Topic.ContentHTML}}</div>
 		{{if .CurrentUser.Loggedin}}<textarea name="topic_content" class="show_on_edit topic_content_input edit_source">{{.Topic.Content}}</textarea>{{end}}
 
 		<span class="controls{{if .Topic.LikeCount}} has_likes{{end}}" aria-label="{{lang "topic.post_controls_aria"}}">
@@ -75,8 +75,8 @@
 {{if not .Topic.IsClosed or .CurrentUser.Perms.CloseTopic}}
 <div class="rowblock topic_reply_form quick_create_form" aria-label="{{lang "topic.reply_aria"}}">
 	<form id="quick_post_form" enctype="multipart/form-data" action="/reply/create/?s={{.CurrentUser.Session}}" method="post"></form>
-	<input form="quick_post_form" name="tid" value='{{.Topic.ID}}' type="hidden"/>
-	<input form="quick_post_form" id="has_poll_input" name="has_poll" value=0 type="hidden"/>
+	<input form="quick_post_form" name="tid" value='{{.Topic.ID}}' type="hidden">
+	<input form="quick_post_form" id="has_poll_input" name="has_poll" value=0 type="hidden">
 	<div class="formrow real_first_child">
 		<div class="formitem">
 			<textarea id="input_content" form="quick_post_form" name="content" placeholder="{{lang "topic.reply_content"}}" required></textarea>
@@ -85,9 +85,9 @@
 	<div class="formrow poll_content_row auto_hide">
 		<div class="formitem">
 			<div class="pollinput" data-pollinput=0>
-				<input type="checkbox" disabled />
+				<input type="checkbox" disabled>
 				<label class="pollinputlabel"></label>
-				<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "topic.reply_add_poll_option_first"}}"/>
+				<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "topic.reply_add_poll_option_first"}}">
 			</div>
 		</div>
 	</div>
@@ -96,7 +96,7 @@
 			<button form="quick_post_form" name="reply-button" class="formbutton">{{lang "topic.reply_button"}}</button>
 			<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "topic.reply_add_poll_button"}}</button>
 			{{if .CurrentUser.Perms.UploadFiles}}
-			<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display:none;" />
+			<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" class="auto_hide">
 			<label for="upload_files" class="formbutton add_file_button">{{lang "topic.reply_add_file_button"}}</label>
 			<div id="upload_file_dock"></div>{{end}}
 		</div>
