implement HooksNoRet and HooksSkip use hookgen for route_forum_list_start use hookgen for forums_frow_assign change forums_frow_assign to a noret hook save bytes and reduce boilerplate

--- a/templates/alert.html
+++ b/templates/alert.html
@@ -1,2 +1,1 @@
-{{if .Avatar}}<div class='alertItem withAvatar'style='background-image:url("{{.Avatar}}");'><img src='{{.Avatar}}'class='bgsub'><a class='text'data-asid='{{.ASID}}'href="{{.Path}}">{{.Message}}</a></div>{{else}}
-<div class='alertItem'><a href="{{.Path}}"class='text'>{{.Message}}</a></div>{{end}}
+{{if .Avatar}}<div class='alertItem withAvatar'style='background-image:url("{{.Avatar}}");'><img src='{{.Avatar}}'class='bgsub'><a class='text'data-asid='{{.ASID}}'href="{{.Path}}">{{.Message}}</a></div>{{else}}<div class='alertItem'><a href="{{.Path}}"class='text'>{{.Message}}</a></div>{{end}}
