text attachments for cosora and shadow reduce bytes and boilerplate

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -1266,6 +1266,13 @@ red {
 .hide_spoil img {
 	content: "   ";
 }
+.attach_box {
+	background-color: #5a5555;
+	background-color: #EFEEEE;
+	border-radius: 3px;
+	padding: 16px;
+	white-space: nowrap;
+}
 
 #ip_search_container .rowlist:not(.has_items) {
 	display: block;
