Add per-user profile comment visibility settings. Honor user blocks in ProfileReplyEditSubmit. Reduce boilerplate.
Update account_privacy_profile_comments phrase.
Add account_privacy_profile_comments_public phrase.
Add account_privacy_profile_comments_registered phrase.
Add account_privacy_profile_comments_self phrase.
Add account_privacy_enable_embeds phrase.

Add profile_comments column to users table.
Add who_can_convo column to users table.

You will need to run the updater / patcher for this commit.

--- a/templates/forum_gallery.html
+++ b/templates/forum_gallery.html
@@ -1,8 +1,8 @@
 {{template "header.html" . }}
-<main id="forumItemList" itemscope itemtype="http://schema.org/ItemList">
-<link rel="canonical" href="//{{.Site.URL}}{{.Forum.Link}}{{if gt .Page 1}}?page={{.Page}}{{end}}"/>
+<main id="forumItemList"itemscope itemtype="http://schema.org/ItemList">
+<link rel="canonical"href="//{{.Site.URL}}{{.Forum.Link}}{{if gt .Page 1}}?page={{.Page}}{{end}}">
 
-	<div id="forum_head_block" class="rowblock rowhead topic_list_title_block{{if .CurrentUser.Loggedin}} has_opt{{end}}">
+	<div id="forum_head_block"class="rowblock rowhead topic_list_title_block{{if .CurrentUser.Loggedin}} has_opt{{end}}">
 		<div class="rowitem forum_title">
 			<h1 itemprop="name">{{.Title}}</h1>
 		</div>
