--- a/templates/account_own_edit_privacy.html
+++ b/templates/account_own_edit_privacy.html
@@ -3,17 +3,18 @@
 </div>
 <div class="colstack_item the_form">
 	<form action="/user/edit/privacy/submit/?s={{.CurrentUser.Session}}" method="post">
-		<!--<input name="o_profile_comments" value="{{if .ProfileComments}}1{{else}}0{{end}}" type="hidden">
-		<input name="o_receive_convos" value="{{if .ReceiveConvos}}1{{else}}0{{end}}" type="hidden">-->
+		<input name="o_profile_comments" value="{{.ProfileComments}}" type="hidden">
+		<!--<input name="o_receive_convos" value="{{if .ReceiveConvos}}1{{else}}0{{end}}" type="hidden">-->
 		<input name="o_enable_embeds" value="{{if .EnableEmbeds}}1{{else}}0{{end}}" type="hidden">
-		<!--<div class="formrow real_first_child">
+		<div class="formrow real_first_child">
 			<div class="formitem formlabel">{{lang "account_privacy_profile_comments"}}</div>
 			<div class="formitem"><select name="profile_comments">
-				<option{{if .ProfileComments}} selected{{end}} value=1>{{lang "option_yes"}}</option>
-				<option{{if not .ProfileComments}} selected{{end}} value=0>{{lang "option_no"}}</option>
+				<option{{if eq .ProfileComments 1}} selected{{end}} value=1>{{lang "account_privacy_profile_comments_public"}}</option>
+				<option{{if eq .ProfileComments 2}} selected{{end}} value=2>{{lang "account_privacy_profile_comments_registered"}}</option>
+				<option{{if eq .ProfileComments 4}} selected{{end}} value=4>{{lang "account_privacy_profile_comments_self"}}</option>
 			</select></div>
 		</div>
-		<div class="formrow">
+		<!--<div class="formrow">
 			<div class="formitem formlabel"><a>Receive Conversations</a></div>
 			<div class="formitem"><select name="receive_convos">
 				<option{{if .ReceiveConvos}} selected{{end}} value=1>{{lang "option_yes"}}</option>
@@ -21,7 +22,7 @@
 			</select></div>
 		</div>-->
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Enable Embeds</a></div>
+			<div class="formitem formlabel"><a>{{lang "account_privacy_enable_embeds"}}</a></div>
 			<div class="formitem"><select name="enable_embeds">
 				<option{{if .EnableEmbeds}} selected{{end}} value=1>{{lang "option_yes"}}</option>
 				<option{{if not .EnableEmbeds}} selected{{end}} value=0>{{lang "option_no"}}</option>
