--- a/templates/profile.html
+++ b/templates/profile.html
@@ -58,7 +58,7 @@
 	{{if .CurrentUser.Loggedin}}
 	{{if .CurrentUser.Perms.BanUsers}}
 	<!-- TODO: Inline the display:none; CSS -->
-	<div id="ban_user_head"class="colstack_item colstack_head hash_hide ban_user_hash" style="display:none;">
+	<div id="ban_user_head"class="colstack_item colstack_head hash_hide ban_user_hash"style="display:none;">
 		<div class="rowitem"><h1><a>{{lang "profile.ban_user_head"}}</a></h1></div>
 	</div>
 	<form id="ban_user_form"class="hash_hide ban_user_hash"action="/users/ban/submit/{{.ProfileOwner.ID}}?s={{.CurrentUser.Session}}"method="post"style="display:none;">
@@ -120,8 +120,8 @@
 
 	<div id="profile_comments_head"class="colstack_item colstack_head hash_hide">
 		<div class="rowitem"><h1><a>{{lang "profile.comments_head"}}</a></h1></div>
-	</div>
-	<div id="profile_comments"class="colstack_item hash_hide">{{template "profile_comments_row.html" . }}</div>
+	</div>{{if .ShowComments}}
+	<div id="profile_comments"class="colstack_item hash_hide">{{template "profile_comments_row.html" . }}</div>{{end}}
 
 {{if .CurrentUser.Loggedin}}
 {{if .CanComment}}
