hide modtool options we don't have access to on forum and topics pages use hookgen for route_topic_list_start hook add route_topic_list_mostviewed_start hook

--- a/templates/forum.html
+++ b/templates/forum.html
@@ -26,7 +26,7 @@
 	{{end}}
 	</div>
 	{{if .CurrentUser.Loggedin}}
-	{{template "topics_mod_floater.html"}}
+	{{template "topics_mod_floater.html" .}}
 	
 	{{if .CurrentUser.Perms.CreateTopic}}
 	<div id="forum_topic_create_form"class="rowblock topic_create_form quick_create_form auto_hide"aria-label="{{lang "quick_topic.aria"}}">
