--- a/templates/topics_mod_floater.html
+++ b/templates/topics_mod_floater.html
@@ -7,8 +7,8 @@
 		<div class="mod_floater_body">
 			<select class="mod_floater_options">
 				<option value="delete">{{lang "topic_list.moderate_delete"}}</option>
-				<option value="lock">{{lang "topic_list.moderate_lock"}}</option>
-				<option value="move">{{lang "topic_list.moderate_move"}}</option>
+				{{if .CanLock}}<option value="lock">{{lang "topic_list.moderate_lock"}}</option>{{end}}
+				{{if .CanMove}}<option value="move">{{lang "topic_list.moderate_move"}}</option>{{end}}
 			</select>
 			<button class="mod_floater_submit">{{lang "topic_list.moderate_run"}}</button>
 		</div>
