new modtools ux - don't allow users to select things they shouldn't be able to - hide mod options the user doesn't have access to - highlight options which can be selected - stop counting topics twice when they're clicked on multiple times
fix modtools not opening in some cases
fix command orders in batch files
fix global.js's getExt()
reduce boilerplate

--- a/templates/topics_mod_floater.html
+++ b/templates/topics_mod_floater.html
@@ -6,9 +6,9 @@
 		</div>
 		<div class="mod_floater_body">
 			<select class="mod_floater_options">
-				<option value="delete">{{lang "topic_list.moderate_delete"}}</option>
-				{{if .CanLock}}<option value="lock">{{lang "topic_list.moderate_lock"}}</option>{{end}}
-				{{if .CanMove}}<option value="move">{{lang "topic_list.moderate_move"}}</option>{{end}}
+				<option class="val_delete" value="delete">{{lang "topic_list.moderate_delete"}}</option>
+				<option class="val_lock{{if not .CanLock}} auto_hide{{end}}" value="lock">{{lang "topic_list.moderate_lock"}}</option>
+				<option class="val_move{{if not .CanMove}} auto_hide{{end}}" value="move">{{lang "topic_list.moderate_move"}}</option>
 			</select>
 			<button class="mod_floater_submit">{{lang "topic_list.moderate_run"}}</button>
 		</div>
