bulk mod: cancel bulk mod mode bulk mod: fix init binding bulk mod: cancel bulk mod mode during page transitions js: more logging js: add before_init_bind_page hook js: add end_unbind_page hook js: change end_bind_page to init hook js: change end_bind_topic to init hook nox: add padding to no alerts alert phrases: add topic_list.cancel_mod

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -82,8 +82,8 @@ li a {
 	padding-right: 8px;
 }
 .alertItem:not(.withAvatar) {
-	padding-top: 0px;
-	padding-bottom: 0px;
+	padding-top: 6px;
+	padding-bottom: 6px;
 }
 .alertItem:not(.withAvatar) a {
 	padding-top: 14px;
@@ -497,6 +497,9 @@ h2 {
 }
 .topic_list_title_block .mod_opt a:before {
 	content: "{{lang "topic_list.moderate" . }}";
+}
+.topic_list_title_block .moderate_link.moderate_open:before {
+	content: "{{lang "topic_list.cancel_mod" . }}";
 }
 
 .filter_opt, .dummy_opt {
