--- a/templates/header.html
+++ b/templates/header.html
@@ -3,16 +3,16 @@
 	<head>
 		<title>{{.Title}} | {{.Header.Site.Name}}</title>
 		{{range .Header.Stylesheets}}
-		<link href="/s/{{.}}"rel="stylesheet"type="text/css">{{end}}
+		<link href="{{.}}"rel="stylesheet"type="text/css">{{end}}
 		{{range .Header.PreScriptsAsync}}
-		<script async src="/s/{{.}}"></script>{{end}}
+		<script async src="{{.}}"></script>{{end}}
 		{{if .CurrentUser.Loggedin}}<meta property="x-mem"content="1">{{end}}
-		<script src="/s/init.js?i=12"></script>
+		<script src="{{res "init.js"}}"></script>
 		{{range .Header.ScriptsAsync}}
-		<script async src="/s/{{.}}"></script>{{end}}
-		<script src="/s/jquery-3.1.1.min.js"></script>
+		<script async src="{{.}}"></script>{{end}}
+		<script src="{{res "jquery-3.1.1.min.js"}}"></script>
 		{{range .Header.Scripts}}
-		<script src="/s/{{.}}"></script>{{end}}
+		<script src="{{.}}"></script>{{end}}
 		<meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 		{{if .Header.MetaDesc}}<meta name="description"content="{{.Header.MetaDesc}}">{{end}}
 		{{/** TODO: Have page / forum / topic level tags and descriptions below as-well **/}}
