link forums page topics to last page

--- a/templates/forums.html
+++ b/templates/forums.html
@@ -18,8 +18,9 @@
 		<span class="forum_right shift_right">
 			{{if .LastReplyer.MicroAvatar}}<a href="{{.LastReplyer.Link}}"><img class="extra_little_row_avatar"src="{{.LastReplyer.MicroAvatar}}"height=64 width=64 alt="Avatar"title="{{.LastReplyer.Name}}'s Avatar"aria-hidden="true"></a>{{end}}
 			<span>
-				<a {{if .LastTopic.Link}}class="forum_poster"href="{{.LastTopic.Link}}"{{else}}class="forum_no_poster"{{end}}>{{if .LastTopic.Title}}{{.LastTopic.Title}}{{else}}{{lang "forums_none"}}{{end}}</a>
-				{{if .LastTopicTime}}<br><span class="rowsmall"title="{{abstime .LastTopic.LastReplyAt}}">{{.LastTopicTime}}</span>{{end}}
+				<a class={{if .LastTopic.Link}}"forum_poster"href="{{.LastTopic.Link}}"{{else}}"forum_no_poster"{{end}}>{{if .LastTopic.Title}}{{.LastTopic.Title}}{{else}}{{lang "forums_none"}}{{end}}</a>
+				{{/**{{if .LastTopicTime}}<br><span class="rowsmall"title="{{abstime .LastTopic.LastReplyAt}}">{{.LastTopicTime}}</span>{{end}}**/}}
+				<br><a href="{{.LastTopic.Link}}{{if ne .LastPage 1}}?page={{.LastPage}}{{end}}{{if .LastTopic.LastReplyID}}#post-{{.LastTopic.LastReplyID}}{{end}}"class="rowsmall lastReplyAt"title="{{abstime .LastTopic.LastReplyAt}}">{{.LastTopicTime}}</a>
 			</span>
 		</span><div style="clear:both;"></div>
 	</div>
