--- a/templates/topics_inner.html
+++ b/templates/topics_inner.html
@@ -11,10 +11,10 @@
 					<a href="#"class="filter_opt_label link_label"data-for="topic_list_filter_select">{{if eq .Sort.SortBy "mostviewed"}}{{lang "topic_list.most_viewed_filter"}}{{else}}{{lang "topic_list.most_recent_filter"}}{{end}} <span class="filter_opt_pointy">▾</span></a>
 					<div id="topic_list_filter_select"class="link_select">
 						<div class="link_option link_selected">
-							<a href="/topics/">{{lang "topic_list.most_recent_filter"}}</a>
+							<a class="link_recent"href="/topics/{{if .SelectedFids}}?fids={{range .SelectedFids}}{{.}}{{end}}{{end}}">{{lang "topic_list.most_recent_filter"}}</a>
 						</div>
 						<div class="link_option">
-							<a href="/topics/most-viewed/">{{lang "topic_list.most_viewed_filter"}}</a>
+							<a class="link_most_viewed"href="/topics/most-viewed/{{if .SelectedFids}}?fids={{range .SelectedFids}}{{.}}{{end}}{{end}}">{{lang "topic_list.most_viewed_filter"}}</a>
 						</div>
 					</div>
 				</div>
