Weekly Views. Add avif mime extension. Optimise skipping watched files which haven't been changed. Block zgrab to save resources. Reduce text and boilerplate.
Add route_topic_list_weekviews_start hook.

Add topic_list.week_views_filter phrase.
Changed footer_powered_by phrase.

You will need to run the updater / patcher for this commit.

--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -97,7 +97,12 @@
 	{{if .CurrentUser.IsSuperAdmin}}<div class="rowitem passive">
 		<a href="/panel/backups/">{{lang "panel_menu_backups"}}</a>
 	</div>{{end}}
-	{{if .CurrentUser.IsAdmin}}<div class="rowitem passive">
+	{{if .CurrentUser.IsAdmin}}
+	<div class="rowitem passive">
 		<a href="/panel/debug/">{{lang "panel_menu_debug"}}</a>
+	</div>
+	{{if .DebugAdmin}}<div class="rowitem passive">
+		<a href="/panel/debug/tasks/">{{lang "panel_menu_debug"}}</a>
 	</div>{{end}}
+	{{end}}
 </div>
