basic user manager search reduce template sizes add PaginatorMod struct
UserStore:
add SearchOffset method
add CountSearch method

phrases:
add panel_users_search_head
add panel_users_search_name
add panel_users_search_name_placeholder
add panel_users_search_email
add panel_users_search_email_placeholder
add panel_users_search_button

--- a/templates/panel_users.html
+++ b/templates/panel_users.html
@@ -1,20 +1,39 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem"><h1>{{lang "panel_users_head"}}</h1></div>
 </div>
-<div id="panel_users" class="colstack_item rowlist bgavatars">
+<div id="panel_users"class="colstack_item rowlist bgavatars">
 	{{range .ItemList}}
-	<div class="rowitem" style="background-image:url('{{.Avatar}}');">
+	<div class="rowitem"style="background-image:url('{{.Avatar}}');">
 		<a class="rowAvatar"{{if $.CurrentUser.Perms.EditUser}}href="/panel/users/edit/{{.ID}}"{{end}}>
 			<img class="bgsub"src="{{.Avatar}}"alt="Avatar"aria-hidden="true">
 		</a>
 		<a class="rowTitle"{{if $.CurrentUser.Perms.EditUser}}href="/panel/users/edit/{{.ID}}"{{end}}>{{.Name}}</a>
 		<span class="panel_floater">
-			<a href="{{.Link}}" class="tag-mini profile_url">{{lang "panel_users_profile"}}</a>
+			<a href="{{.Link}}"class="tag-mini profile_url">{{lang "panel_users_profile"}}</a>
 			{{if (.Tag) and (.IsSuperMod)}}<span class="panel_tag">{{.Tag}}</span></span>{{end}}
-			{{if .IsBanned}}<a href="/users/unban/{{.ID}}?s={{$.CurrentUser.Session}}" class="panel_tag panel_right_button ban_button">{{lang "panel_users_unban"}}</a>{{else if not .IsSuperMod}}<a href="/user/{{.ID}}#ban_user" class="panel_tag panel_right_button ban_button">{{lang "panel_users_ban"}}</a>{{end}}
-			{{if not .Active}}<a href="/users/activate/{{.ID}}?s={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">{{lang "panel_users_activate"}}</a>{{end}}
+			{{if .IsBanned}}<a href="/users/unban/{{.ID}}?s={{$.CurrentUser.Session}}"class="panel_tag panel_right_button ban_button">{{lang "panel_users_unban"}}</a>{{else if not .IsSuperMod}}<a href="/user/{{.ID}}#ban_user"class="panel_tag panel_right_button ban_button">{{lang "panel_users_ban"}}</a>{{end}}
+			{{if not .Active}}<a href="/users/activate/{{.ID}}?s={{$.CurrentUser.Session}}"class="panel_tag panel_right_button">{{lang "panel_users_activate"}}</a>{{end}}
 		</span>
 	</div>
 	{{end}}
 </div>
-{{template "paginator.html" . }}
+{{template "paginator_mod.html" . }}
+
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel_users_search_head"}}</h1></div>
+</div>
+<div class="colstack_item the_form">
+	<form action="/panel/users/"method="get">
+		<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_users_search_name"}}</a></div>
+			<div class="formitem"><input name="s-name"type="text"{{if .Search.Name}}value="{{.Search.Name}}"{{end}}placeholder="{{lang "panel_users_search_name_placeholder"}}"></div>
+		</div>
+		{{if .CurrentUser.Perms.EditUserEmail}}<div class="formrow">
+			<div class="formitem formlabel"><a>{{lang "panel_users_search_email"}}</a></div>
+			<div class="formitem"><input name="s-email"type="email"{{if .Search.Email}}value="{{.Search.Email}}"{{end}}placeholder="{{lang "panel_users_search_email_placeholder"}}"></div>
+		</div>{{end}}
+		<div class="formrow form_button_row">
+			<div class="formitem"><button class="formbutton">{{lang "panel_users_search_button"}}</button></div>
+		</div>
+	</form>
+</div>
