--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -40,8 +40,8 @@
 			<div class="formitem"><input name="name" type="text" placeholder="{{lang "panel.forums_create_name"}}"></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel.forums_create_description_label"}}</a></div>
-			<div class="formitem"><input name="desc" type="text" placeholder="{{lang "panel.forums_create_description"}}"></div>
+			<div class="formitem formlabel"><a>{{lang "panel.forums_create_desc_label"}}</a></div>
+			<div class="formitem"><input name="desc" type="text" placeholder="{{lang "panel.forums_create_desc"}}"></div>
 		</div>
 		<div class="formrow">
 		<div class="formitem formlabel"><a>{{lang "panel.forums_active_label"}}</a></div>
@@ -53,13 +53,13 @@
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel.forums_preset_label"}}</a></div>
 			<div class="formitem"><select name="preset">
-				<option selected value="all">{{lang "panel_preset_everyone"}}</option>
-				<option value="announce">{{lang "panel_preset_announcements"}}</option>
-				<option value="members">{{lang "panel_preset_member_only"}}</option>
-				<option value="staff">{{lang "panel_preset_staff_only"}}</option>
-				<option value="admins">{{lang "panel_preset_admin_only"}}</option>
-				<option value="archive">{{lang "panel_preset_archive"}}</option>
-				<option value="custom">{{lang "panel_preset_custom"}}</option>
+				<option selected value="all">{{lang "panel.preset_everyone"}}</option>
+				<option value="announce">{{lang "panel.preset_announcements"}}</option>
+				<option value="members">{{lang "panel.preset_member_only"}}</option>
+				<option value="staff">{{lang "panel.preset_staff_only"}}</option>
+				<option value="admins">{{lang "panel.preset_admin_only"}}</option>
+				<option value="archive">{{lang "panel.preset_archive"}}</option>
+				<option value="custom">{{lang "panel.preset_custom"}}</option>
 			</select></div>
 		</div>
 		<div class="formrow">
