--- a/templates/panel_forum_edit.html
+++ b/templates/panel_forum_edit.html
@@ -1,45 +1,45 @@
 <div class="colstack_item colstack_head">
-	<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
+	<div class="rowitem"><h1>{{.Name}}{{lang "panel.forum_head_suffix"}}</h1></div>
 </div>
 <div id="panel_forum"class="colstack_item the_form">
 	<form action="/panel/forums/edit/submit/{{.ID}}?s={{.CurrentUser.Session}}"method="post">
 	<div class="formrow">
-		<div class="formitem formlabel"><a>{{lang "panel_forum_name"}}</a></div>
-		<div class="formitem"><input name="forum_name"type="text"value="{{.Name}}"placeholder="{{lang "panel_forum_name_placeholder"}}"></div>
+		<div class="formitem formlabel"><a>{{lang "panel.forum_name"}}</a></div>
+		<div class="formitem"><input name="forum_name"type="text"value="{{.Name}}"placeholder="{{lang "panel.forum_name_placeholder"}}"></div>
 	</div>
 	<div class="formrow">
-		<div class="formitem formlabel"><a>{{lang "panel_forum_description"}}</a></div>
-		<div class="formitem"><input name="forum_desc"type="text"value="{{.Desc}}"placeholder="{{lang "panel_forum_description_placeholder"}}"></div>
+		<div class="formitem formlabel"><a>{{lang "panel.forum_desc"}}</a></div>
+		<div class="formitem"><input name="forum_desc"type="text"value="{{.Desc}}"placeholder="{{lang "panel.forum_desc_placeholder"}}"></div>
 	</div>
 	<div class="formrow">
-		<div class="formitem formlabel"><a>{{lang "panel_forum_active"}}</a></div>
+		<div class="formitem formlabel"><a>{{lang "panel.forum_active"}}</a></div>
 		<div class="formitem"><select name="forum_active">
 			<option{{if .Active}} selected{{end}} value=1>{{lang "option_yes"}}</option>
 			<option{{if not .Active}} selected{{end}} value=0>{{lang "option_no"}}</option>
 		</select></div>
 	</div>
 	<div class="formrow">
-		<div class="formitem formlabel"><a>{{lang "panel_forum_preset"}}</a></div>
+		<div class="formitem formlabel"><a>{{lang "panel.forum_preset"}}</a></div>
 		<div class="formitem">
 			<select name="forum_preset">
-				<option{{if eq .Preset "all"}} selected{{end}} value="all">{{lang "panel_preset_everyone"}}</option>
-				<option{{if eq .Preset "announce"}} selected{{end}} value="announce">{{lang "panel_preset_announcements"}}</option>
-				<option{{if eq .Preset "members"}} selected{{end}} value="members">{{lang "panel_preset_member_only"}}</option>
-				<option{{if eq .Preset "staff"}} selected{{end}} value="staff">{{lang "panel_preset_staff_only"}}</option>
-				<option{{if eq .Preset "admins"}} selected{{end}} value="admins">{{lang "panel_preset_admin_only"}}</option>
-				<option{{if eq .Preset "archive"}} selected{{end}} value="archive">{{lang "panel_preset_archive"}}</option>
-				<option{{if eq .Preset "custom"}} selected{{end}} value="custom">{{lang "panel_preset_custom"}}</option>
+				<option{{if eq .Preset "all"}} selected{{end}} value="all">{{lang "panel.preset_everyone"}}</option>
+				<option{{if eq .Preset "announce"}} selected{{end}} value="announce">{{lang "panel.preset_announcements"}}</option>
+				<option{{if eq .Preset "members"}} selected{{end}} value="members">{{lang "panel.preset_member_only"}}</option>
+				<option{{if eq .Preset "staff"}} selected{{end}} value="staff">{{lang "panel.preset_staff_only"}}</option>
+				<option{{if eq .Preset "admins"}} selected{{end}} value="admins">{{lang "panel.preset_admin_only"}}</option>
+				<option{{if eq .Preset "archive"}} selected{{end}} value="archive">{{lang "panel.preset_archive"}}</option>
+				<option{{if eq .Preset "custom"}} selected{{end}} value="custom">{{lang "panel.preset_custom"}}</option>
 			</select>
 		</div>
 	</div>
 	<div class="formrow">
-		<div class="formitem"><button name="panel-button"class="formbutton form_middle_button">{{lang "panel_forum_update_button"}}</button></div>
+		<div class="formitem"><button name="panel-button"class="formbutton form_middle_button">{{lang "panel.forum_update_button"}}</button></div>
 	</div>
 	</form>
 </div>
 <div class="colstack_item colstack_head">
 	<div class="rowitem">
-		<h1>{{lang "panel_forum_permissions_head"}}</h1>
+		<h1>{{lang "panel.forum_permissions_head"}}</h1>
 	</div>
 </div>
 <div id="forum_quick_perms"class="colstack_item rowlist formlist the_form">
@@ -48,13 +48,76 @@
 		<div class="formitem editable_parent">
 			<a>{{.Group.Name}}</a>
 			<input name="gid"value="{{.Group.ID}}"type="hidden"class="editable_block"data-field="gid"data-type="hidden"data-value="{{.Group.ID}}">
-			<span class="edit_fields hide_on_edit rowsmall">{{lang "panel_forum_edit_button"}}</span>
+			<span class="edit_fields hide_on_edit rowsmall">{{lang "panel.forum_edit_button"}}</span>
 			<div class="panel_floater">
-				<span data-field="perm_preset"data-type="list"data-value="{{.Preset}}" class="editable_block perm_preset perm_preset_{{.Preset}}"></span>
-				<a class="panel_right_button has_inner_button show_on_edit"href="/panel/forums/edit/perms/submit/{{$.ID}}"><button class='panel_tag submit_edit'type='submit'>{{lang "panel_forum_short_update_button"}}</button></a>
-				<a class="panel_right_button has_inner_button show_on_edit"href="/panel/forums/edit/perms/{{$.ID}}-{{.Group.ID}}"><button class='panel_tag'type='submit'>{{lang "panel_forum_full_edit_button"}}</button></a>
+				<span data-field="perm_preset"data-type="list"data-value="{{.Preset}}"class="editable_block perm_preset perm_preset_{{.Preset}}"></span>
+				<a class="panel_right_button has_inner_button show_on_edit"href="/panel/forums/edit/perms/submit/{{$.ID}}"><button class='panel_tag submit_edit'type='submit'>{{lang "panel.forum_short_update_button"}}</button></a>
+				<a class="panel_right_button has_inner_button show_on_edit"href="/panel/forums/edit/perms/{{$.ID}}-{{.Group.ID}}"><button class='panel_tag'type='submit'>{{lang "panel.forum_full_edit_button"}}</button></a>
 			</div>
 		</div>
 	</div>
 	{{end}}
+</div>
+{{if .Actions}}
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel.forum_actions_head"}}</h1></div>
+</div>
+<div id="panel_forum_actions"class="colstack_item rowlist">
+	{{range .Actions}}
+	<div class="rowitem panel_compactrow editable_parent">
+		<a class="panel_upshift">{{.ActionName}}{{if .RunDaysAfterTopicCreation}} - {{.RunDaysAfterTopicCreation}} days after topic creation{{end}}{{if .RunDaysAfterTopicLastReply}} - {{.RunDaysAfterTopicLastReply}} days after topic last reply{{end}}</a>
+		<span class="panel_floater">
+			<a href="/panel/forums/action/delete/submit/{{.ID}}?s={{$.CurrentUser.Session}}&ret={{$.ID}}"class="panel_tag panel_right_button delete_button"></a>
+		</span>
+	</div>
+	{{end}}
+</div>
+{{end}}
+<div class="colstack_item colstack_head">
+	<div class="rowitem">
+		<h1>{{lang "panel.forum_actions_create_head"}}</h1>
+	</div>
+</div>
+<div id="panel_forum_action_create"class="colstack_item the_form">
+	<form action="/panel/forums/action/create/submit/{{.ID}}?s={{.CurrentUser.Session}}"method="post">
+	<!--<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forum_action_run_on_topic_creation"}}</a></div>
+		<div class="formitem"><select name="action_run_on_topic_creation">
+			<option value=1>{{lang "option_yes"}}</option>
+			<option selected value=0>{{lang "option_no"}}</option>
+		</select></div>
+	</div>-->
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forum_action_run_days_after_topic_creation"}}</a></div>
+		<div class="formitem">
+			<input name="action_run_days_after_topic_creation"value="0"type="number">
+		</div>
+	</div>
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forum_action_run_days_after_topic_last_reply"}}</a></div>
+		<div class="formitem">
+			<input name="action_run_days_after_topic_last_reply"value="0"type="number">
+		</div>
+	</div>
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forum_action_action"}}</a></div>
+		<div class="formitem">
+			<select name="action_action">
+				<option value="delete"selected>{{lang "panel.forum_action_action_delete"}}</option>
+				<option value="lock">{{lang "panel.forum_action_action_lock"}}</option>
+				<option value="unlock">{{lang "panel.forum_action_action_unlock"}}</option>
+				<option value="move">{{lang "panel.forum_action_action_move"}}</option>
+			</select>
+		</div>
+	</div>
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel.forum_action_extra"}}</a></div>
+		<div class="formitem">
+			<input name="action_extra"type="text">
+		</div>
+	</div>
+	<div class="formrow">
+		<div class="formitem"><button name="panel-button"class="formbutton form_middle_button">{{lang "panel.forum_action_create_button"}}</button></div>
+	</div>
+	</form>
 </div>
